# vkrt

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  shader_build.py
resourcespec/examples/json/: example_dsl.json  example_pipeline.json  example_pipeline_layout.json  example_renderpass.json
resourcespec/examples/xml/: example_dsl.xml  example_pipeline.xml  example_pipeline_layout.xml  example_renderpass.xml
resourcespec/examples/yaml/: example_dsl.yaml  example_pipeline.yaml  example_pipeline_layout.yaml  example_renderpass.yaml
schema/: asset.schema.json  descriptor_set_layout.schema.json  descriptor_set_layout_binding.schema.json
schema/enum/: descriptor-type.schema.json  shader-stage.schema.json
schema/mask/: shader-stages.schema.json
shaders/include/: lib.glsl
shaders/src/: frag.glsl  vert.glsl
src/: main.cpp
src/neuron/: engine.cpp  engine.hpp  logutil.hpp  window.cpp  window.hpp
src/neuron/render/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  helpers.cpp  helpers.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_context.cpp  render_context.hpp  shader_module.cpp  shader_module.hpp
src/neuron/render/descriptor/: descriptor_table.hpp
xmlresource_spec/: example_renderpass.xml
